<resources>
    <string name="app_name">EmployeeTrack</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="name_hint">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="employee_id">Employee Id</string>
    <string name="contact_no">Contact No</string>
    <string name="designation">Designation</string>
    <string name="business_unit">Business Unit</string>
    <string name="save">Save</string>
</resources>
