<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/login_screen_main_layout_padding"
    tools:context="com.yash.employeetrack.LoginActivity">

    <!-- Login progress -->

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/login_screen_main_layout_margin"
        android:padding="@dimen/login_screen_padding_15">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:drawable/editbox_background"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding_10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/drawable_padding_10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@android:drawable/editbox_background"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/drawable_padding_10dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/drawable_padding_10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:id="@+id/email_signIn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_5"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/forget_password"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_5"
        android:padding="@dimen/padding_5"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/email_signUp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_5"
        android:gravity="center"
        android:padding="@dimen/padding_5"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

</RelativeLayout>